# cosemclient

./: CMakeLists.txt  README.md
lib/: AxdrPrinter.cpp  AxdrPrinter.h  Configuration.cpp  Configuration.h  CosemClient.cpp  CosemClient.h  Module.mk  Transport.cpp  Transport.h  Util.cpp  Util.h
src/: cosem_client_hal.c  cosem_hal.c  main.cpp
